--- a/src/app/page.css
+++ b/src/app/page.css
@@ -1,6 +1,6 @@
 .App {
 
-    background-color: white;
+    background-color:#FEFEFC;
     display:flex;
     flex-direction: column;
     width: 100vw;
