--- a/src/app/restaurant_page/Header.css
+++ b/src/app/restaurant_page/Header.css
@@ -56,24 +56,17 @@
 }
 
 @media screen and (max-width: 768px) {
-    .Header_art{
-        height: 70vw;
+    .Header_rest{
+        height: 38vh;
         width: 100vw;
+        /* overflow-y: visible; */
+        margin-top: 25%;
 
  
     }
 
-    .header-background_art{
     
-        opacity: 1;
-      height: 70vw;
-      width: 100vw;
-      /* border: solid  1px rgb(180, 143, 48);; */
-
-
-    }
-    
-    .Header_center_art{
+    .Header_center_rest{
 
        
         padding: 1rem;
@@ -82,7 +75,7 @@
    
     }
 
-    .Header_center_art > h2 {
+    .Header_center_rest > h2 {
    
         font-size: 2.8rem;
    
