--- a/src/app/components/Header.css
+++ b/src/app/components/Header.css
@@ -1,5 +1,6 @@
 
 
+
 .see{
 
     /* position: absolute; */
@@ -19,11 +20,11 @@
   
     color: white;
     font-size: 700%;
+
     margin-left: 3%;
     line-height: 1.2;
     font-weight: 800;
     letter-spacing: 0.02em;
-    /* border: solid white; */
     
   
   }
@@ -64,16 +65,6 @@
     
 }
 
-/* .header-background{
-    
-    background-image: url("../assets/Header background for top of pages .jpg");
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    opacity: 100%; 
-
-} */
-
-
 
 .Header_components{
 
@@ -83,65 +74,123 @@
     
 }
 
-.Header_center{
-   
+
+@media screen and (min-width: 351px) and (max-width: 768px) {
+    .Header{
+        height: 38vh;
+        width: 100vw;
+        /* top: 10%; */
+        margin-top: 20%;
+        /* overflow-y: visible; */
+    }
+
+
+
+.see{
+
+    /* position: absolute; */
+    color: white;
     display: flex;
-    justify-content: center; 
-    align-items: center;
-
-    /* z-index: 950; */
-
-    padding: 1.5rem;
-    border-radius: 1px;
-    border: solid  rgb(180, 143, 48);;
-    outline: none;
-    background-color: white;    
-}
-
-.Header_center> h2 {
-   
-    font-size: 3.2rem;
-    color: rgb(48, 45, 45);
+    flex-direction: column;
+    /* border: solid white; */
+    margin-top: 30%;
+    /* border: solid blue; */
+    width: 80vw;
+    /* height: 40vh; */
+    margin-left: 3%;
+    /* margin-right: 35%; */
+    
+  }
+  
+  .see> h2{
+  
+    color: white;
+    font-size: 320%;
+    margin-left: 3%;
     line-height: 1;
     font-weight: 600;
-    text-align: center;
     letter-spacing: 0.02em;
+    /* border: solid white; */
+    
+  
+  }
+  
+  .h3{
+  
+    color: white;
+    font-size: 55%;
+    margin-left: 5%;
+    /* border: solid white; */
+    line-height: 1;
+    font-weight: 400;
+    letter-spacing: 0.01em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 25%;
+    font-style: italic;
+  }
+
+
 
 }
 
-@media screen and (max-width: 768px) {
-    .Header_art{
-        height: 70vw;
-        width: 100vw;
-
- 
-    }
-
-    .header-background_art{
-    
-        opacity: 1;
-      height: 70vw;
-      width: 100vw;
-      /* border: solid  1px rgb(180, 143, 48);; */
+@media screen and (max-width: 350px) {
+  .Header{
+    height: 55vh;
+    width: 100vw;
+    /* top: 10%; */
+    margin-top: 20%;
+    /* overflow-y: visible; */
+}
 
 
-    }
-    
-    .Header_center_art{
 
-       
-        padding: 1rem;
-        border: solid 2px rgb(180, 143, 48);;
+.see{
 
-   
-    }
+/* position: absolute; */
+color: white;
+display: flex;
+flex-direction: column;
+/* border: solid white; */
+margin-top: 30%;
+/* border: solid blue; */
+width: 80vw;
+/* height: 40vh; */
+margin-left: 3%;
+/* margin-right: 35%; */
 
-    .Header_center_art > h2 {
-   
-        font-size: 2.8rem;
-   
-    
-    }
+}
+
+.see> h2{
+
+color: white;
+font-size: 320%;
+margin-left: 3%;
+line-height: 1;
+font-weight: 600;
+letter-spacing: 0.02em;
+/* border: solid white; */
+
+
+}
+
+.h3{
+
+color: white;
+font-size: 55%;
+margin-left: 5%;
+/* border: solid white; */
+line-height: 1;
+font-weight: 400;
+letter-spacing: 0.01em;
+display: flex;
+justify-content: center;
+align-items: center;
+margin-top: 25%;
+font-style: italic;
+}
+
 
 }
 
