--- a/src/app/components/OurStory.css
+++ b/src/app/components/OurStory.css
@@ -59,7 +59,7 @@
     text-transform: capitalize;
     color: black;
     /* border: solid red; */
-    max-width: 150%;
+    /* max-width: 150%; */
 }
 
 .Services_rightside3{
@@ -83,25 +83,79 @@
   @media screen and (max-width: 768px) {
 
     .Story{
-        margin-top:70px;    
+        margin-top:17%;
+
     }
 
     .Story > h1 {
         text-align: center;
+        font-size: 390%;
+        max-width: 80vw;
+
+        /* max-width: 80vw; */
+
+
     }
 
+    .Services_leftside1  {
+        flex: 1;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        /* border: solid red; */
+    
+      }
     .Services_components3 {
         display:flex;
         flex-direction: column;
-        margin-top:60px;
+        margin-top:15%;
         position: relative;
         left: 0px;
+        max-width: 80vw;
+
     }
-    
+
+    .Services_leftside1 > h1 {
+   
+        font-size: 350%;
+        color: rgb(48, 45, 45);
+        line-height: 1;
+        font-weight: 600;
+        text-align: center;
+        letter-spacing: 0.02em;
+        
+        /* margin-bottom: 8%; */
+       
+    }
+
+    .Services_leftside1 > p {
+  font-size: 185%;
+          font-weight: 400;
+          text-align: justify;
+          text-transform: capitalize;
+          color: black;
+          margin-top:10%;
+
+          /* border: solid red; */
+          /* max-width: 150%; */
+      }
+
+
+.Services_rightside3{
+
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* border: solid green; */
+
+}
+      
     .Services_rightside3 img {
-        height: 140vw;
+        height: 60vh;
         width: 100vw;
-        padding: 2rem;
+        /* padding: 2rem; */
         margin-top: 30px;
       }
 }
