--- a/src/app/services/art/Header.css
+++ b/src/app/services/art/Header.css
@@ -54,21 +54,13 @@
 
 @media screen and (max-width: 768px) {
     .Header_art{
-        height: 70vw;
+        height: 38vh;
         width: 100vw;
-
+        /* overflow-y: visible; */
+        margin-top: 25%;
  
     }
 
-    .header-background_art{
-    
-        opacity: 1;
-      height: 70vw;
-      width: 100vw;
-      /* border: solid  1px rgb(180, 143, 48);; */
-
-
-    }
     
     .Header_center_art{
 
@@ -81,7 +73,7 @@
 
     .Header_center_art > h2 {
    
-        font-size: 2.8rem;
+        font-size: 350%;
    
     
     }
