--- a/src/app/services/art/Our_Services_Art.css
+++ b/src/app/services/art/Our_Services_Art.css
@@ -25,7 +25,6 @@
     text-align: center;
     /* line-height: 3rem; */
     max-width: 60rem;
-
 }
 
 
@@ -57,9 +56,7 @@
   margin-top:7%;
 }
 
-.mt  {
-margin-top:7%;
-}
+
 
 /* .mt2{
   margin-top:5%;
@@ -71,117 +68,52 @@ margin-top:7%;
   @media screen and (max-width: 768px) {
     .Art{
       width: 100vw;
-      margin-top:30px;
+      margin-top:10%;
             
   }
 
   .Art > h1 {
   
-    font-size: 1.4rem;
+    font-size: 185%;
+    text-transform: capitalize;
+    text-align: justify;
+    line-height: 1.5;
     padding: 2rem;
-    text-align: center;
-}
+    letter-spacing: 0.00em;
+
+    /* max-width: 80vw; */
+
+
+  }
+
 .Art_components {
 
   display:flex;
-flex-direction: column-reverse;
-  margin-top:35px;
-  right: 0px;
-
-}
-
-.Art_rightside  {
-  align-items: center;
-}
-
-.Art_rightside > h1 {
-  
+flex-direction: column;
+  margin-top:-8%;
   text-align: center;
-  bottom: 0px;
+
+    /* border: solid red; */
+
+      /* max-width: 80vw; */
+}
+
+.Art_components > h1{
+
+  font-size: 350%;
+  color: rgb(180, 143, 48);;
+  line-height: 1;
+  font-weight: 550;
+  letter-spacing: 0.03em;
+  margin-top:15%;
+  max-width: 100vw;
 
 }
 
-.Art_leftside img {
-  height: 100vw;
-  width: 100vw;
-  padding: 2rem;
-  margin-top: -20px;
-
-  /* border: solid red; */
+.mt  {
+  max-width: 100vw;
 }
 
-.Art_rightside > p {
- 
-  top: 0px;
-  padding: 2rem;
-  margin-top: 15px;
-
-}
-
-.Art_components1 {
-
-  margin-left: 0px;
-  display:flex;
-  flex-direction: column;
-  max-width: 90rem;
-  scroll-margin-top: 10rem;
-  margin-top:65px;
-}
-
-.Art_leftside1  {
-
-  align-items:center;
-
-}
-
-.Art_leftside1 > p {
- 
-padding: 2rem;
-top: 0px;
-margin-top: -25px;
-
-
-}
-.Art_rightside1 img {
-  height: 100vw;
-  width: 100vw;
-  padding: 2rem;
-}
-.Art_components2 {
-
-
-  display:flex;
-  flex-direction: column-reverse;
-  margin-top:25px;
-
-
-}
-.Art_rightside2  {
-
-  align-items: center;
-
-
-}
-.Art_rightside2 > p {
- 
-padding: 2rem;
-top: 0px;
-margin-top: 15px;
-
-}
-
-.Art_rightside2 > h1 {
-  
-  bottom: 0px;
-}
-
-.Art_leftside2 img {
-  height: 100vw;
-  width: 100vw;
-  padding: 2rem;
-  margin-top: -10px;
-
-}
 
   }
 
