--- a/src/app/components/Navbar.css
+++ b/src/app/components/Navbar.css
@@ -147,7 +147,8 @@
   list-style: none;
   display: flex;
   flex-direction: column;
-  margin-top: 120px;
+  margin-top: 65px;
+  /* border: solid red; */
 
 
 
