--- a/src/app/components/Navbar.css
+++ b/src/app/components/Navbar.css
@@ -125,7 +125,7 @@
   left:0%;
   width: 100vw;
   height: 150vh;
-  position:sticky;
+  position:fixed;
   transition: 0.5s ease;
   z-index: 5;
   background: white;
