--- a/src/app/components/Navbar.css
+++ b/src/app/components/Navbar.css
@@ -124,11 +124,12 @@
   top: 0;
   left:0%;
   width: 100vw;
-  height: 150vh;
-  position:fixed;
+  height: 100%;
+  /* position:fixed; */
   transition: 0.5s ease;
   z-index: 5;
   background: white;
+  overflow-y: hidden;
 }
 
 
