--- a/src/app/components/ContactUs.css
+++ b/src/app/components/ContactUs.css
@@ -1,30 +1,25 @@
+.Service{
 
+  display:flex;
+  align-items:center;
+  justify-content: center;
+  flex-direction: column;
+  margin-top:2%;
 
+  /* background-color: red; */
+  /* border: solid red; */
 
-
-.Contact{
-
-    display:flex;
-    align-items:center;
-    justify-content: center;
-    margin-top:5%;
-    flex-direction: column;
-    
-    
 }
+.Service > h1 {
 
-.Contact > h1 {
-
-  font-size: 450%;
+  /* font-size: 450%; */
+  font-size: 2.7rem;
   color: rgb(180, 143, 48);;
-    line-height: 1;
-    font-weight: 550;
-    letter-spacing: 0.03em;
+  line-height: 1;
+  font-weight: 550;
+  letter-spacing: 0.03em;
 
 }
-
-
-
 .Contact_components {
 
     display:flex;
@@ -74,7 +69,8 @@ textarea {
 #container {
   border: solid 3px rgb(180, 143, 48);
   padding: 30.5px;
-  width: 65vw;
+  width: 50vw;
+  height: 80vh;
 }
 
 form {
@@ -121,7 +117,7 @@ input[type='text'], [type='email'], select, textarea {
   border: none;
 	border-bottom: solid 2px #474544;
 	color: #474544;
-	font-size: 1.000em;
+	font-size: 1.700em;
   font-weight: 400;
   letter-spacing: 1px;
 	margin: 0em 0 1.875em 0;
@@ -160,14 +156,14 @@ input[type='text']:focus, [type='email']:focus, textarea:focus {
 
 .submit > p{
     font-family: 'Helvetica', Arial, sans-serif;
-    font-size: 0.950em;
+    font-size: 1.5npmem;
     font-weight: bold;
     text-transform: uppercase;
 }
 
 .submit_info > p{
     font-family: 'Helvetica', Arial, sans-serif;
-    font-size: 0.990em;
+    font-size: 1.3em;
     font-weight: 550;
     text-transform: uppercase;
     margin-top: 10px;
@@ -226,11 +222,11 @@ textarea {
 #form_button {
   background: none;
   border: solid 2px #474544;
-  color: #474544;
+  color: hsl(20, 2%, 27%);
   cursor: pointer;
   display: inline-block;
   font-family: 'Helvetica', Arial, sans-serif;
-  font-size: 0.875em;
+  font-size: 1.4em;
   font-weight: bold;
   outline: none;
   padding: 20px 35px;
