--- a/src/app/components/OurStory.css
+++ b/src/app/components/OurStory.css
@@ -1,84 +1,96 @@
-.Story{
-
-    display:flex;
-    align-items:center;
-    justify-content: center;
-    margin-top:5%;
-    flex-direction: column;
-
-}
-
-.Story > h1 {
-
-    font-size: 450%;
-    color: rgb(180, 143, 48);
-    line-height: 1;
-    font-weight: 550;
-    letter-spacing: 0.03em;
-}
 
 
-
-.Services_components3 {
+.About_components1 {
 
     display:flex;
     max-width: 65vw;
     scroll-margin-top: 10rem;
     margin-top:5%;
+
 }
 
-.Services_leftside1  {
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    flex-direction: column;
-    /* border: solid red; */
+  .About_leftside1  {
 
+        display:flex;
+        flex-direction: column;
   }
 
-  .Services_leftside1 > h1 {
-   
-    font-size: 350%;
-    color: rgb(48, 45, 45);
-    line-height: 1;
-    font-weight: 600;
-    text-align: left;
-    letter-spacing: 0.02em;
-    /* margin-bottom: 8%; */
-   
-   
-}
 
 
 
-.Services_leftside1 > p {
-  font-size: 175%;
+.About_leftside1 > p {
+ 
+    font-size: 1.7rem;
+    /* line-height: 2.8rem; */
+    line-height: 48px;
     font-weight: 400;
-    text-align: justify;
-    text-transform: capitalize;
+    /* text-align: left; */
     color: black;
-    /* border: solid red; */
-    /* max-width: 150%; */
-}
-
-.Services_rightside3{
-
-    flex: 1;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    /* border: solid green; */
+    letter-spacing: 0.02em;
+    text-align: justify;
 
 }
 
-.Services_rightside3 img {
-    /* height : 65vh;
-    width: 25vw; */
-    height : 85%;
-    width: 65%;
-    /* border: solid red; */
+.About_leftside1 img + p {
+ 
+
+  /* border: solid red; */
+}
+
+.About_leftside1 img + p + p{
+ 
+  /* border: solid green; */
+  margin-top: 35px;
+}
+
+.About_leftside1 img {
+    height : 65%;
+    width: 27%;
+    float: right;
+    margin-left: 38px;
   }
+
+
+
+/*set between 99% and 79%*/
+@media screen
+and (min-device-width: 1935px)
+and (max-device-width: 2405px) {
+
+    .Services_leftside1 > h1 {
+   
+        font-size: 2.8rem;       
+    }
+    
+    
+    
+    .Services_leftside1 > p {
+        font-size: 2rem;
+    }
+
+}
+
+/*set between 79% and 66%*/
+@media screen
+and (min-device-width: 2406px)
+and (max-device-width: 2900px) {
+
+    .Services_leftside1 > h1 {
+   
+        font-size: 3.3rem;       
+    }
+    
+    
+    
+    .Services_leftside1 > p {
+  
+        font-size: 2.5rem;
+
+    }
+
+
+}
+
 
   @media screen and (max-width: 768px) {
 
