--- a/src/app/components/Our_Services.css
+++ b/src/app/components/Our_Services.css
@@ -1,3 +1,5 @@
+
+
 .Services{
 
     display:flex;
@@ -5,14 +7,13 @@
     justify-content: center;
     margin-top:5%;
     flex-direction: column;
-    /* border: solid red; */
 
-    
 }
 
 .Services > h1 {
 
-    font-size: 450%;
+    /* font-size: 450%; */
+    font-size: 2.7rem;
     color: rgb(180, 143, 48);;
     line-height: 1;
     font-weight: 550;
@@ -34,70 +35,84 @@
 
 .p {
 
-    display: flex; 
-    font-size: 185%;
+    font-size: 1.7rem;
     font-weight: 400;
-    text-transform: capitalize;
     color: black;
     text-align: justify;
-
-
-}
-
-
-.custom__button1 {
-    background-color: rgb(180, 143, 48);
-      color: white;
-      font-weight: 500;
-      letter-spacing: 0.03em;
-      line-height: 28px;
-      font-size: 24px;
-      padding: 0.5rem 1.5rem;
-      border-radius: 1px;
-      border: none;
-      outline: none;
-      cursor: pointer;
-      margin-top:8%;
-  }
-
-
-
-  .Services_leftside1  {
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    flex-direction: column;
-
-  }
-
-  .Services_leftside1 > h1 {
-   
-    font-size: 350%;
-    color: rgb(48, 45, 45);
-    line-height: 1;
-    font-weight: 600;
-    text-align: left;
     letter-spacing: 0.02em;
-    margin-bottom: 8%;
-   
-   
+    line-height: 48px;
+}
+
+.p1 {
+  margin-top: 30px;
+  font-size: 1.4rem;
+  font-weight: 400;
+  color: black;
+  /* letter-spacing: 0.03em; */
+  line-height: 38px;
+  font-style: italic;
+  max-width: 30%;
+  margin-left: 900px;
+}
+
+.p2 {
+
+  font-size: 1.2rem;
+  font-weight: 300;
+  color: black;
+  /* letter-spacing: 0.03em; */
+  line-height: 30px;
+  font-style: italic;
+  display: flex;
+  justify-content: flex-end;
+
 }
 
 
 
-.Services_leftside1 > p {
-  font-size: 175%;
-    font-weight: 400;
-    text-align: justify;
-    text-transform: capitalize;
-    color: black;
+/*set between 99% and 79%*/
+@media screen
+and (min-device-width: 1935px)
+and (max-device-width: 2405px) {
+
+  .p {
+
+    font-size: 1.9rem;
+}
+.Services > h1 {
+
+  font-size: 3.2rem;
+
+
 }
 
-  
+}
+
+/*set between 79% and 66%*/
+@media screen
+and (min-device-width: 2406px)
+and (max-device-width: 2900px) {
+
+  .p {
+
+    font-size: 2.6rem;
+}
+
+.Services > h1 {
+
+  /* font-size: 450%; */
+  font-size: 4rem;
 
 
-  /*----------------------------------------------------*/
+}
+
+}
+
+
+
+
+
+
 
   @media screen and (max-width: 768px) {
 
@@ -138,3 +153,53 @@
 
 
 }
+
+
+/* .custom__button1 {
+  background-color: rgb(180, 143, 48);
+    color: white;
+    font-weight: 500;
+    letter-spacing: 0.03em;
+    line-height: 28px;
+    font-size: 24px;
+    padding: 0.5rem 1.5rem;
+    border-radius: 1px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    margin-top:8%;
+}
+
+
+
+.Services_leftside1  {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+
+}
+
+.Services_leftside1 > h1 {
+ 
+  font-size: 350%;
+  color: rgb(48, 45, 45);
+  line-height: 1;
+  font-weight: 600;
+  text-align: left;
+  letter-spacing: 0.02em;
+  margin-bottom: 8%;
+ 
+ 
+}
+
+
+
+.Services_leftside1 > p {
+font-size: 175%;
+  font-weight: 400;
+  text-align: justify;
+  text-transform: capitalize;
+  color: black;
+} */
