--- a/src/app/components/Header.css
+++ b/src/app/components/Header.css
@@ -16,7 +16,8 @@
   .see> h2{
   
     color: white;
-    font-size: 5.3vw;
+    font-size: 5vw;
+    /* font-size: 80px; */
 
     margin-left: 3%;
     line-height: 1.2;
@@ -51,15 +52,12 @@
     height:100vh;
     width: 100vw;
     overflow-y: hidden;
-    /* height:100vh; */
     background-image: url("../assets/Header background for top of pages .jpg");
     background-repeat: no-repeat;
-    background-size: 100% 100%;
-    opacity: 100%; 
-    /* position: relative; */
-
-   
-    
+    /* background-size: 100% 100%; */
+    background-size: cover;
+    opacity: 100%;
+    /* margin-top: 130px;     */
 }
 
 
