--- a/src/app/page.css
+++ b/src/app/page.css
@@ -1,13 +1,12 @@
 .App {
 
-    background-color:#FEFEFC;
+    /* background-color:#FEFEFC; */
+    background-color:#e5ded4;
     display:flex;
     flex-direction: column;
     width: 100vw;
     overflow-x: hidden;
 
-
-    /* width: 100%; */
     
   }
   
