--- a/src/app/page.css
+++ b/src/app/page.css
@@ -1,7 +1,7 @@
 .App {
 
     /* background-color:#FEFEFC; */
-    background-color:#e5ded4;
+    background-color:#ebddc995;
     display:flex;
     flex-direction: column;
     width: 100vw;
