--- a/src/app/services/art/Our_Services_Art.css
+++ b/src/app/services/art/Our_Services_Art.css
@@ -44,16 +44,16 @@
 
 .Art_components > h1{
 
-  font-size: 3.5rem;
+  font-size: 2.7rem;
   color: rgb(180, 143, 48);;
   line-height: 1;
   font-weight: 550;
-  letter-spacing: 0.03em;
+  letter-spacing: 0.02em;
 
 }
 
 .mt  {
-  margin-top:7%;
+  margin-top:6rem;
 }
 
 
