--- a/src/app/services/art/Header.css
+++ b/src/app/services/art/Header.css
@@ -9,7 +9,8 @@
     height:100vh;
     background-image: url("../../assets/art page header background .jpg");
     background-repeat: no-repeat;
-    background-size: 100% 100%;
+    /* background-size: 100% 100%; */
+    background-size: cover;
     opacity: 100%; 
     /* position: relative; */
 
