--- a/src/app/components/Header.css
+++ b/src/app/components/Header.css
@@ -28,24 +28,16 @@
     flex-direction: column;
     /* border: solid white; */
     margin-top: 25rem;
-    /* border: solid blue; */
-    /* width: 60vw; */
-    /* background-color: rgba(230, 164, 42, 0.697); */
-    background-color:rgba(0, 26, 255, 0.554);
-    /* background-color: white; */
-
+    background-color:rgba(0, 26, 255, 0.335);
     border: solid black 1px;
-    padding: 0.3rem;
-
+    padding: 1rem;
     margin-left: 2rem;
-    /* margin-right: 35%; */
     
   }
   
   .see> h2{
   
-    /* background-color: rgb(230, 177, 42, 0.5); */
-    /* color: rgb(177, 135, 28); */
+
     color: white;
     font-size: 100px;
     /* font-size: 80px; */
@@ -91,124 +83,143 @@
   }
 
 
-
-
-
-
-@media screen and (min-width: 351px) and (max-width: 768px) {
-    .Header{
-        height: 43vh;
-        width: 100vw;
-        /* top: 10%; */
-        margin-top: 20%;
-        /* overflow-y: visible; */
+  @media screen and (min-width: 769px)  and (max-width: 1150px) {
+    .H{
+      display: flex;
+      flex-direction: column;
     }
 
+    .see{
+ width: 70vw;
+ margin-top: 35rem;
+
+    }
+    .see> h2{
+  
+      font-size: 85px;    
+    }
+    .H{
+    
+      font-size: 85px;
+    }
+
+  }
 
 
-.see{
 
-    /* position: absolute; */
-    color: white;
-    display: flex;
-    flex-direction: column;
-    /* border: solid white; */
-    margin-top: 30%;
-    /* border: solid blue; */
-    width: 80vw;
-    /* height: 40vh; */
-    margin-left: 3%;
-    /* margin-right: 35%; */
+@media screen and (min-width: 451px) and (max-width: 768px) {
+    .Header{
+        height: 30rem;
+        margin-top: 9rem;
+        background-size: cover;
+
+        /* border: solid green; */
+    }
+
+    .H{
+      display: flex;
+      flex-direction: column;
+      font-size: 60px;
+      color: white;
+
+
+    }
+
+    .see{
+      width: 70vw;
+      margin-top: 7rem;
+      background-color:rgba(0, 26, 255, 0.335);
+
+      /* background-color:#ebdbc99b; */
+
+     
+         }
+
+    .see> h2{
+  
+      font-size: 60px;
+      color: white;
+    
+    }
+
+    .ss{
+  
+      font-size: 40px;    
+    }
+  
+
+
+
+}
+
+@media screen and (max-width: 600px) {
+  .H{
+
+    font-size: 9vw;
     
   }
-  
+  .Header{
+    height: 30rem;
+    margin-top: 9rem;
+
+    /* border: solid green; */
+}
   .see> h2{
   
-    color: white;
-    font-size: 320%;
-    margin-left: 3%;
-    line-height: 1;
-    font-weight: 600;
-    letter-spacing: 0.02em;
-    /* border: solid white; */
-    
-  
-  }
-  
-  .h3{
-  
-    color: white;
-    font-size: 55%;
-    margin-left: 5%;
-    /* border: solid white; */
-    line-height: 1;
-    font-weight: 400;
-    letter-spacing: 0.01em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20%;
-    font-style: italic;
+    font-size: 9vw;  
   }
 
+  .ss{
 
-
+    font-size: 5vw;    
+  }
+  .see{
+  
+    margin-top: 11rem;   
+       }
 }
 
-@media screen and (max-width: 350px) {
+
+@media screen and (max-width: 450px) {
   .Header{
-    height: 55vh;
-    width: 100vw;
-    /* top: 10%; */
-    margin-top: 20%;
-    /* overflow-y: visible; */
+    height: 30rem;
+    margin-top: 8rem;
+    background-size: cover;
+
+    /* border: solid green; */
 }
 
+.H{
+  display: flex;
+  flex-direction: column;
+  color: white;
+  font-size: 10vw;
 
+
+
+}
 
 .see{
+  width: 70vw;
+  margin-top: 11rem;
+  background-color:rgba(0, 26, 255, 0.335);
 
-/* position: absolute; */
-color: white;
-display: flex;
-flex-direction: column;
-/* border: solid white; */
-margin-top: 30%;
-/* border: solid blue; */
-width: 80vw;
-/* height: 40vh; */
-margin-left: 3%;
-/* margin-right: 35%; */
+  /* background-color:#ebdbc99b; */
 
-}
+ 
+     }
 
 .see> h2{
 
-color: white;
-font-size: 300%;
-margin-left: 3%;
-line-height: 1;
-font-weight: 600;
-letter-spacing: 0.02em;
-/* border: solid white; */
+  color: white;
+  font-size: 11vw;  
 
 
 }
 
-.h3{
+.ss{
+  font-size: 6vw;    
 
-color: white;
-font-size: 50%;
-margin-left: 5%;
-/* border: solid white; */
-line-height: 1.2;
-font-weight: 400;
-letter-spacing: 0.01em;
-display: flex;
-justify-content: center;
-align-items: center;
-margin-top: 20%;
-font-style: italic;
 }
 
 
