--- a/src/app/components/Header.css
+++ b/src/app/components/Header.css
@@ -182,8 +182,8 @@
 
 @media screen and (max-width: 450px) {
   .Header{
-    height: 30rem;
-    margin-top: 8rem;
+    height: 85vh;
+    margin-top:6.5rem;
     background-size: cover;
 
     /* border: solid green; */
