--- a/src/app/components/Navbar.css
+++ b/src/app/components/Navbar.css
@@ -221,6 +221,12 @@
   font-size: 2.2rem;
   /* border: solid green; */
 }
+
+
+
+.Ap{
+  color: white;
+}
 }
 
 
@@ -298,11 +304,12 @@
 
 
   }
+  .Ap{
+    color: white;
+  }
   .navbar{
     padding: 0.5rem;
-    background-color: white;
-
-    /* background-color:#ebddc995; */
+    background-color:#ebddc995;
     /* border: solid red; */
     
   
